--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ flask==2.3.3
 flask-login==0.6.3
 flask-sqlalchemy==3.1.1
 flask-talisman==1.0.0
+flask-migrate==4.1.0
 anthropic==0.20.0
 openai==1.6.0
 python-dotenv==1.0.0
