--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,9 @@ services:
     env: python
     buildCommand: |
       pip install -r requirements.txt
+      python -c "from app import create_app; app = create_app(); app.app_context().push(); from app.models import db; db.create_all()"
+      flask db stamp head
+      flask db migrate
       flask db upgrade
     startCommand: gunicorn 'run:app' --bind=0.0.0.0:$PORT
     envVars:
